[workspace]
members = [".", "macros"]
resolver = "2"


[package]
name = "trillium-frontend"
version = "0.3.0-rc.1"
edition = "2024"
description = "Trillium handler for JS/TS frontend projects: proxies a dev server in debug mode, embeds compiled assets in release mode"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbr/trillium-frontend"
readme = "README.md"
keywords = ["trillium", "frontend", "vite", "spa", "proxy"]
categories = ["web-programming::http-server", "web-programming"]

[features]
dev-proxy = [
        "dep:trillium-proxy",
        "dep:portpicker",
        "trillium-frontend-macros/dev-proxy",
]

[dependencies]
trillium = "1.0.0-rc.1"
trillium-frontend-macros = { path = "macros", version = "0.3.0-rc.1" }
fieldwork = "0.4"
log = "0.4"
trillium-static-compiled = "0.6.0-rc.1"
trillium-client = "0.7.0-rc.1"
trillium-proxy = { version = "0.6.0-rc.1", optional = true }
portpicker = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "0.11"
trillium-smol = "0.5.0-rc.1"
trillium-logger = "0.5.0-rc.1"
