[package]
name = "trillium-frontend-macros"
version = "0.4.0"
edition = "2024"
description = "Internal proc-macro crate for trillium-frontend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trillium-rs/trillium-frontend"
keywords = ["trillium", "frontend", "proc-macro"]
categories = ["web-programming::http-server"]

[features]
dev-proxy = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
